# tars

./: .gitignore  CMakeLists.txt  README.md  sample.raw  tars_sample.raw
src/: main.cpp
src/tars_assistant/: CMakeLists.txt  main.cpp  tars_brain.cpp  tars_brain.hpp  tars_tasks.cpp  tars_tasks.hpp
src/tars_engine/: CMakeLists.txt  tars_audio.cpp  tars_audio.hpp  tars_brain.cpp  tars_brain.hpp  tars_intent.cpp  tars_intent.hpp  tars_state.cpp  tars_state.hpp  tars_tasks.cpp  tars_tasks.hpp
